--- a/CarPostsServer/CarPostsServer.csproj
+++ b/CarPostsServer/CarPostsServer.csproj
@@ -8,10 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SmartEcoA\SmartEcoA.csproj" />
+    <PackageReference Include="Npgsql" Version="5.0.1.1" />
   </ItemGroup>
 
 </Project>
