--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -87,6 +87,7 @@
     <None Remove="ClientApp\src\app\carposts\edit.component.ts" />
     <None Remove="ClientApp\src\app\carposts\index.component.ts" />
     <None Remove="ClientApp\src\app\carposts\list.component.ts" />
+    <None Remove="ClientApp\src\app\dashboard\report.model.ts" />
     <None Remove="ClientApp\src\app\dataproviders\create.component.ts" />
     <None Remove="ClientApp\src\app\dataproviders\dataprovider.model.ts" />
     <None Remove="ClientApp\src\app\dataproviders\dataprovider.service.ts" />
@@ -307,6 +308,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\carposts\list.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\dashboard\report.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\create.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\dataprovider.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\dataproviders\dataprovider.service.ts" />
