--- a/SmartEcoA/ClientApp/package.json
+++ b/SmartEcoA/ClientApp/package.json
@@ -45,7 +45,9 @@
     "core-js": "^3.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "mat-table-exporter": "^1.2.5",
     "moment": "^2.29.1",
+    "ngx-print": "^1.2.0-beta.6",
     "oidc-client": "^1.9.1",
     "ol": "^6.5.0",
     "popper.js": "^1.16.0",
