CarPostClient: modify appsettings, difference between autotest versions

--- a/CarPostsClient/appsettings.json
+++ b/CarPostsClient/appsettings.json
@@ -1,9 +1,7 @@
 {
   "CarPostId": "1",
   "ConnectionStrings": {
-    "AutoTestModelPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\AUTOTEST\\Db",
-    "AutoTestDataPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\AUTOTEST\\Db",
-    "SmokeMeterModelPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\Dymomer\\Db",
-    "SmokeMeterDataPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\Dymomer\\Db"
+    "AutoTestPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts",
+    "SmokeMeterPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\Dymomer\\Db"
   }
 }
