CarPostClient: modified for a paradox (autotest), changes logic. CarPostServer: change logic SmartEcoA: edit view car posts data for version

--- a/CarPostsClient/appsettings.json
+++ b/CarPostsClient/appsettings.json
@@ -1,7 +1,7 @@
 {
   "CarPostId": "1",
   "ConnectionStrings": {
-    "AutoTestPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts",
-    "SmokeMeterPath": "D:\\Job\\KAZ\\Files\\AutoEcoPosts\\Dymomer\\Db"
+    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer",
+    "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Dymomer\\Db"
   }
 }
