--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -150,6 +150,7 @@
     <None Remove="ClientApp\src\app\projects\list.component.ts" />
     <None Remove="ClientApp\src\app\projects\project.model.ts" />
     <None Remove="ClientApp\src\app\projects\project.service.ts" />
+    <None Remove="ClientApp\src\app\reports\reports.component.ts" />
     <None Remove="ClientApp\src\app\users\changepassword.component.ts" />
     <None Remove="ClientApp\src\app\users\changepasswordinfo.component.ts" />
     <None Remove="ClientApp\src\app\users\delete.component.ts" />
@@ -441,6 +442,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\projects\list.component.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\reports\reports.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\users\changepassword.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\users\changepasswordinfo.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\users\delete.component.ts">
