--- a/SmartEcoA/appsettings.json
+++ b/SmartEcoA/appsettings.json
@@ -10,5 +10,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReportsFolder": "C:\\Reports",
+  "ReportsTeplatesFolder": "C:\\Reports\\Templates"
 }
