change autotest logic

--- a/CarPostsClient/appsettings.json
+++ b/CarPostsClient/appsettings.json
@@ -1,7 +1,7 @@
 {
   "CarPostId": "1",
   "ConnectionStrings": {
-    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer",
+    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.08.06 Autotest New\\Autotest\\Db",
     "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Dymomer\\Db"
   }
 }
