SmartEcoA: change reports

--- a/CarPostsClient/appsettings.json
+++ b/CarPostsClient/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "CarPostId": "1",
+  "CarPostId": "5",
   "ConnectionStrings": {
-    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.08.31 Autotest New\\Autotest\\Db",
+    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Db4\\Db",
     "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Dymomer\\Db"
   }
 }
