CarPostClient, CarPostClientUpdater bug fixes

--- a/CarPostClient/appsettings.json
+++ b/CarPostClient/appsettings.json
@@ -1,5 +1,5 @@
 {
   "CarPostId": "22", // Id автомобильного поста, Id автомобильных постов можно посмотреть здесь http://smarteco.kz:8086/ru/
-  "AutoTestPath": "D:\\Db", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
-  "SmokeMeterPath": "D:\\Db" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
+  "AutoTestPath": "C:\\Db\\AutoTest", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
+  "SmokeMeterPath": "C:\\Db\\SmokeMeter" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
 }
