--- a/CarPostClientUpdater/appsettings.json
+++ b/CarPostClientUpdater/appsettings.json
@@ -1,4 +1,4 @@
 // папка с приложением должна быть в папке Updater в папке CarPostClient
 {
-  "CarPostClientDir": "C:\\Users\\N\\source\\repos\\NurymKenzh\\SmartEcoA\\CarPostClient\\bin\\Release\\netcoreapp3.1\\publish" // если в верхней папке, то пусто; иначе - полный путь, используйте двойной слеш "\\"!
+  "CarPostClientDir": "" // если в верхней папке, то пусто; иначе - полный путь, используйте двойной слеш "\\"!
 }
