SmartEcoA, CarPostsServer, CarPostsServer: change structure SmokeMeter

--- a/CarPostsClient/appsettings.json
+++ b/CarPostsClient/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "CarPostId": "5",
+  "CarPostId": "22",
   "ConnectionStrings": {
-    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Db4\\Db",
+    "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\talgar\\Db",
     "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\Dymomer\\Db"
   }
 }
