--- a/CarPostClient/appsettings.json
+++ b/CarPostClient/appsettings.json
@@ -1,5 +1,5 @@
 {
   "CarPostId": "2", // Id автомобильного поста, Id автомобильных постов можно посмотреть здесь http://smarteco.kz:8086/ru/
-  "AutoTestPath": "C:\\Db\\AutoTest", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
-  "SmokeMeterPath": "C:\\Db\\SmokeMeter" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
+  "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.09.20\\Db", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
+  "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.10.19 smokers\\kk\\Db" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
 }
