change appsettings data

--- a/CarPostClient/appsettings.json
+++ b/CarPostClient/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CarPostId": "2", // Id автомобильного поста, Id автомобильных постов можно посмотреть здесь http://smarteco.kz:8086/ru/
-  "AutoTestPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.09.20\\Db", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
-  "SmokeMeterPath": "D:\\Rabota\\Kaz\\DocumentsProject\\AutotestAndDymomer\\2021.10.19 smokers\\kk\\Db" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
+  "CarPostId": "1", // Id автомобильного поста, Id автомобильных постов можно посмотреть здесь http://smarteco.kz:8086/ru/
+  "AutoTestPath": "D:\\AutotestAndDymomer\\Db", // путь к папке с базой данных јвтотеста, используйте двойной слеш "\\"!
+  "SmokeMeterPath": "D:\\AutotestAndDymomer\\Db" // путь к папке с базой данных ƒымомера, используйте двойной слеш "\\"!
 }
