--- a/SmartEcoA/SmartEcoA.csproj
+++ b/SmartEcoA/SmartEcoA.csproj
@@ -52,6 +52,15 @@
     <None Remove="ClientApp\src\app\administration\carposts.component.ts" />
     <None Remove="ClientApp\src\app\administration\directories.component.ts" />
     <None Remove="ClientApp\src\app\administration\posts.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\answer.model.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\appealcitizen.service.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\appealcitizens.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\create.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\createanswer.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\delete.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\list.component.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\question.model.ts" />
+    <None Remove="ClientApp\src\app\appealcitizens\questionandanswers.model.ts" />
     <None Remove="ClientApp\src\app\authorize\authorize.guard.ts" />
     <None Remove="ClientApp\src\app\authorize\authorize.interceptor.ts" />
     <None Remove="ClientApp\src\app\carmodelautotests\carmodelautotest.model.ts" />
@@ -212,6 +221,17 @@
     <TypeScriptCompile Include="ClientApp\src\app\administration\posts.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\administration\directories.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\administration\administration.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\createanswer.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\create.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\delete.component.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\questionandanswers.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\appealcitizens.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\list.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\question.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\answer.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\appealcitizens\appealcitizen.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\authorize\authorize.guard.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\authorize\authorize.interceptor.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\carmodelautotests\carmodelautotest.model.ts">
